apps/base/sc_hub/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: schub
  namespace: schub
spec:
  selector:
    app: schub
  ports:
  - name: http
    port: 80
    targetPort: 80
